--- a/groupsapp/templates/groupsapp/register.html
+++ b/groupsapp/templates/groupsapp/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
 {% block content %}
-<div class="card scoutpurple">
+<div class="card ">
     <form action="{% url 'register'%}" method="post" class="card-body">
         {% csrf_token %}
         <h1 class="card-title">Sign Up to Group Manager</h1>
