--- a/groupsapp/templates/groupsapp/objects/member/profile.html
+++ b/groupsapp/templates/groupsapp/objects/member/profile.html
@@ -8,6 +8,7 @@
             <img src="{% static "images/profile.svg"%}">
             <form method="post">
                 {% csrf_token %}
+                
                 <table class="table">
                     <thead>
                         <tr>
@@ -33,32 +34,32 @@
                         </tr>
                     </tbody>
                 </table>
-            <button type="submit" class="btn btn-primary">Save</button>
-        </form>
-        <table class="table">
-            <tbody>
-                {% for group in groups%}
-                <tr>
-                    <th scope="row">Group</th>
-                    <td><a href="{% url 'group' group.id %}">{{group}}</a></td>
-                    <td>
-                    <form action="{% url 'removegroupmember' group.id 'remove_member' member.id%}" method="post">
-                        {% csrf_token %}
-                        {% if owned_by_user == True %}
-                        <button action="submit" class="btn btn-outline-danger">Leave</button>
-                        {% elif group.id == group_id %}
-                        <button action="submit" class="btn btn-outline-danger">Remove</button>
-                        {% endif %}
-                    </form>
-                    
-                    </td>
-                </tr>
-                {%empty%}No Groups
-                {%endfor%}
-            </tbody>
-        </table>
+                <button type="submit" class="btn btn-primary">Save</button>
+            </form>
+            <table class="table">
+                <tbody>
+                    {% for group in groups%}
+                    <tr>
+                        <form action="{% url 'removegroupmember' group.id 'remove_member' member.id%}" method="post">
+                            {% csrf_token %}
+                            <th scope="row">Group</th>
+                            <td><a {%if owned_by_user or group.id == group_id%} href="{% url 'group' group.id %}"{%endif%}>{{group}}</a></td>
+                            <td>
+                            {% if owned_by_user %}
+                                <button action="submit" class="btn btn-outline-danger">Leave</button>
+                            {% elif group.id == group_id %}
+                                <button action="submit" class="btn btn-outline-danger">Remove</button>
+                            {% endif %}
+                        </form>
                         
-                
+                        </td>
+                    </tr>
+                    {%empty%}No Groups
+                    {%endfor%}
+                </tbody>
+            </table>
+
+                    
             {% if owned_by_user == True%}
             <div class="row col-12">
                 
@@ -91,7 +92,7 @@
                 </div>
             </div>
             {% else %}
-            <div class="row col-12">
+            <div class="col-12">
                 
 
                 
@@ -101,6 +102,30 @@
             {% endif%}
         </div>
     </div>
+    {% if owned_by_group == True%}
+        
+        <table class="table col-lg-6">
+            <thead>
+                <tr>
+                <th scope="col">Parent/Guardian</th>
+                </tr>
+            </thead>
+            
+            <tbody>
+            {%for user in users%}
+                <tr>
+                <th scope="row">Username</th>
+                <td>{{user}}</td>
+                </tr>
+                <tr>
+                <th scope="row">Email</th>
+                <td>{{user.email}}</td>
+                </tr>
+                {% endfor%}
+            </tbody>
+        </table>
+        
+        {% endif  %}
 </div>
 
 {% endblock %}
