Removed non functioning profile code

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,3 +4,5 @@
     {{ form.as_p }}
     <button type= "submit">Login</button>
 </form>
+<!-- THIS LOGIN HTML IS NOT THE ONE USED IN THE PROJECT -->
+<!-- PLEASE SEE login.html in groupsapp/templates-->
