--- a/groupsapp/templates/groupsapp/objects/group/admin.html
+++ b/groupsapp/templates/groupsapp/objects/group/admin.html
@@ -36,7 +36,7 @@
                 <td>
                 <form action="{% url 'editgroupmember' group.id member.id%}" method="post">
                     {% csrf_token %}
-                    <button action="submit" onclick="reload()" class="btn btn-outline-primary">Edit</button>
+                    <button action="submit" onclick="reload()" class="btn btn-outline-primary">View/Edit</button>
                 </form>
                 <form action="{% url 'removegroupmember' group.id 'remove_member' member.id%}" method="post">
                     {% csrf_token %}
